Fixed a navigation bug on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ li
 
 #news
 {
-    background: tomato;
+    background: #4b6584;
     color: #ffffff;
     padding: 15px;
     position: relative;
@@ -153,6 +153,7 @@ li
 {
     display: flex;
     max-width: 1700px;
+    width: 100%;
     margin: 0 auto;
     justify-content: space-around;
     align-items: center;
@@ -209,7 +210,7 @@ li
 
 #navbar
 {
-    transition: .5s ease
+    transition: .5s ease;
 }
 
 .upper-wrapper
@@ -219,7 +220,7 @@ li
     height: 60px;
     justify-content: space-between;
     align-items: center;
-    overflow: hidden
+    overflow: hidden;
 }
 
 .nav
@@ -230,6 +231,9 @@ li
     transform: translateY(100vh);
     background-color: var(--clr-pdark);
     transform-origin: left;
+}
+.dfo {
+    display: none;
 }
 
 .nav-active
@@ -279,7 +283,7 @@ li
 .nav li
 {
     list-style: none;
-    font-size: 1.3em;
+    font-size: 1em;
     transition: transform .5s ease;
     position: relative;
     transform-origin: center
@@ -367,10 +371,10 @@ li
     width: 100%;
     height: 100vh;
     margin-bottom: -95px;
-    padding-top: 90px;
+    padding-top: 50px;
     background-image: linear-gradient(180deg, var(--clr-pdark) 30%, var(--clr-plight) 80%);
     position: relative;
-    transition: all .5s ease !important;
+    transition: all .4s ease !important;
 }
 
 .t-shape
@@ -734,7 +738,7 @@ video
     align-items: center;
     padding: 0 10px;
     background: #fff;
-    margin: 120px 0 40px 0;
+    margin: 80px 0 40px 0;
 }
 
 .download a
@@ -1083,7 +1087,7 @@ footer a[href=""]
 
     .download
     {
-        margin: 90px 0 50px 0;
+        margin: 40px 0 50px 0;
     }
 }
 
@@ -1373,7 +1377,7 @@ footer a[href=""]
 
     .nav li
     {
-        font-size: inherit;
+        font-size: 1.3rem;
         transition: all .5s ease;
         cursor: pointer
     }
@@ -1575,5 +1579,30 @@ footer a[href=""]
     .download h1
     {
         font-size: 23px;
+    }
+
+    .news-desc {
+        width: 100%;
+        font-size: 15px;
+        justify-content: start;
+    }
+    .news-desc-content h2 {
+        font-size: 17px;
+    }
+    .news-desc-content p {
+        max-width: 600px;
+        width: 80%;
+        font-size: 15px;
+    }
+    .news-more-info {
+        padding: 5px 10px;
+        right: 70px;
+        font-size: 15px;
+        margin-left: 30px;
+        margin-top: 10px;
+    }
+    #news-close {
+        top: 7px;
+        right: 7px;
     }
 }
